test/scc_test/stmt/semantic-errors/028.t
void test()
{
    switch(10)
        int a;
}